@@ -51,6 +51,7 @@ tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the cam
 tracker-area-map=Use map marker with name '__1__' to fill in this corner.
 tracker-area-player=Use player coordinates to fill in this corner.
 tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
+tracker-wrong-surface=Tracker is disabled because tracker surface differs from camera surface.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
