@@ -82,6 +82,12 @@ default_gui["tlbe_fancy_list_box_image"] = {
     stretch_image_to_widget_size = true
 }
 
+default_gui["tlbe_fancy_list_box_image_reduce_size"] = {
+    type = "image_style",
+    parent = "tlbe_fancy_list_box_image",
+    padding = 5,
+}
+
 default_gui["tlbe_fancy_list_box_button_hidden"] = {
     type = "empty_widget_style",
     width = 22,
