@@ -24,9 +24,9 @@ local function getWindowPlayButtonStyle(selected)
     return "frame_action_button"
 end
 
-local function findActiveTracker(trackers)
+local function findActiveTracker(trackers, surfaceName)
     for _, tracker in pairs(trackers) do
-        if tracker.enabled == true then
+        if tracker.enabled == true and tracker.surfaceName == surfaceName then
             return tracker
         end
     end
@@ -53,6 +53,7 @@ function GUI.tick()
 
             if playerSettings.gui.cameraTrackerList.valid then
                 GUI.createTrackerList(
+                    playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                     playerSettings.gui.cameraTrackerList,
                     playerSettings.guiPersist.selectedCameraTracker,
                     playerSettings.cameras,
@@ -64,6 +65,7 @@ function GUI.tick()
 
             if playerSettings.gui.trackerList.valid then
                 GUI.createTrackerList(
+                    playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                     playerSettings.gui.trackerList,
                     playerSettings.guiPersist.selectedTracker,
                     playerSettings.cameras,
@@ -137,6 +139,7 @@ function GUI.onClick(event)
             playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
         )
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.trackerList,
             playerSettings.guiPersist.selectedTracker,
             playerSettings.cameras,
@@ -232,6 +235,7 @@ function GUI.onClick(event)
             playerSettings.trackers[index].enabled = playerSettings.trackers[index].enabled == false
 
             GUI.createTrackerList(
+                playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                 playerSettings.gui.trackerList,
                 playerSettings.guiPersist.selectedTracker,
                 playerSettings.cameras,
@@ -241,6 +245,7 @@ function GUI.onClick(event)
             )
 
             GUI.createTrackerList(
+                playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                 playerSettings.gui.cameraTrackerList,
                 playerSettings.guiPersist.selectedCameraTracker,
                 playerSettings.cameras,
@@ -299,6 +304,7 @@ function GUI.onClick(event)
 
             GUI.createCameraTrackerList(playerSettings)
             GUI.createTrackerList(
+                playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                 playerSettings.gui.trackerList,
                 playerSettings.guiPersist.selectedTracker,
                 playerSettings.cameras,
@@ -325,6 +331,7 @@ function GUI.onClick(event)
             end
 
             GUI.createTrackerList(
+                playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
                 playerSettings.gui.trackerList,
                 playerSettings.guiPersist.selectedTracker,
                 playerSettings.cameras,
@@ -333,10 +340,10 @@ function GUI.onClick(event)
                 GUI.addTrackerButtons
             )
 
-            GUI.createCameraAndTracker(
+            GUI.createCameraAddTracker(
                 playerSettings.gui.cameraTrackerListFlow,
                 playerSettings.trackers,
-                playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
+                playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
             )
 
             GUI.createTrackerConfigAndInfo(
@@ -380,6 +387,7 @@ function GUI.onSelected(event)
             playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
         )
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.cameraTrackerList,
             1,
             playerSettings.cameras,
@@ -401,6 +409,7 @@ function GUI.onSelected(event)
         playerSettings.guiPersist.selectedTracker = #playerSettings.trackers
 
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.trackerList,
             playerSettings.guiPersist.selectedTracker,
             playerSettings.cameras,
@@ -409,10 +418,10 @@ function GUI.onSelected(event)
             GUI.addTrackerButtons
         )
 
-        GUI.createCameraAndTracker(
+        GUI.createCameraAddTracker(
             playerSettings.gui.cameraTrackerListFlow,
             playerSettings.trackers,
-            playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
         )
 
         GUI.createTrackerConfigAndInfo(
@@ -432,6 +441,7 @@ function GUI.onSelected(event)
             #playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
 
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.cameraTrackerList,
             1,
             playerSettings.cameras,
@@ -440,17 +450,21 @@ function GUI.onSelected(event)
             GUI.addCameraTrackerButtons
         )
 
-        GUI.createCameraAndTracker(
+        GUI.createCameraAddTracker(
             playerSettings.gui.cameraTrackerListFlow,
             playerSettings.trackers,
-            playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
         )
     elseif event.element.name == "camera-surface" then
         playerSettings.cameras[playerSettings.guiPersist.selectedCamera].surfaceName =
             event.element.get_item(event.element.selected_index)
+
+        GUI.createCameraTrackerList(playerSettings)
     elseif event.element.name == "tracker-surface" then
         playerSettings.trackers[playerSettings.guiPersist.selectedTracker].surfaceName =
             event.element.get_item(event.element.selected_index)
+
+        GUI.createCameraTrackerList(playerSettings)
     end
 end
 
@@ -464,6 +478,7 @@ function GUI.onTextChanged(event)
         playerSettings.trackers[playerSettings.guiPersist.selectedTracker].name = event.element.text
 
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.trackerList,
             playerSettings.guiPersist.selectedTracker,
             playerSettings.cameras,
@@ -473,6 +488,7 @@ function GUI.onTextChanged(event)
         )
 
         GUI.createTrackerList(
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
             playerSettings.gui.cameraTrackerList,
             1,
             playerSettings.cameras,
@@ -481,10 +497,10 @@ function GUI.onTextChanged(event)
             GUI.addCameraTrackerButtons
         )
 
-        GUI.createCameraAndTracker(
+        GUI.createCameraAddTracker(
             playerSettings.gui.cameraTrackerListFlow,
             playerSettings.trackers,
-            playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
+            playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
         )
     elseif event.element.name == "camera-resolution-x" then
         Camera.setWidth(playerSettings.cameras[playerSettings.guiPersist.selectedCamera], event.element.text)
@@ -827,6 +843,7 @@ function GUI.createCameraSettings(parent, playerGUI, guiPersist, cameras, tracke
         style = "tlbe_tracker_list"
     }
     GUI.createTrackerList(
+        cameras[guiPersist.selectedCamera],
         playerGUI.cameraTrackerList,
         guiPersist.selectedCameraTracker,
         cameras,
@@ -835,7 +852,7 @@ function GUI.createCameraSettings(parent, playerGUI, guiPersist, cameras, tracke
         GUI.addCameraTrackerButtons
     )
 
-    GUI.createCameraAndTracker(playerGUI.cameraTrackerListFlow, trackers, cameras[guiPersist.selectedCamera].trackers)
+    GUI.createCameraAddTracker(playerGUI.cameraTrackerListFlow, trackers, cameras[guiPersist.selectedCamera])
 
     -- Tracker info
     playerGUI.cameraTrackerInfo = trackerBox.add {type = "table", column_count = 2}
@@ -887,6 +904,7 @@ function GUI.createTrackerSettings(parent, playerGUI, guiPersist, cameras, track
         style = "tlbe_tracker_list"
     }
     GUI.createTrackerList(
+        cameras[guiPersist.selectedCamera],
         playerGUI.trackerList,
         guiPersist.selectedTracker,
         cameras,
@@ -903,7 +921,14 @@ function GUI.createTrackerSettings(parent, playerGUI, guiPersist, cameras, track
     return flow
 end
 
-function GUI.createTrackerList(trackerList, selectedIndex, cameras, trackers, namePrefix, addTrackerButtons)
+function GUI.createTrackerList(
+    selectedCamera,
+    trackerList,
+    selectedIndex,
+    cameras,
+    trackers,
+    namePrefix,
+    addTrackerButtons)
     trackerList.clear()
 
     for index, tracker in pairs(trackers) do
@@ -919,7 +944,7 @@ function GUI.createTrackerList(trackerList, selectedIndex, cameras, trackers, na
             style = style
         }
 
-        addTrackerButtons(index, cameras, trackers, trackerRow)
+        addTrackerButtons(index, selectedCamera, cameras, trackers, trackerRow)
 
         trackerRow.add {
             type = "label",
@@ -932,6 +957,7 @@ end
 
 function GUI.createCameraTrackerList(playerSettings)
     GUI.createTrackerList(
+        playerSettings.cameras[playerSettings.guiPersist.selectedCamera],
         playerSettings.gui.cameraTrackerList,
         playerSettings.guiPersist.selectedCameraTracker,
         playerSettings.cameras,
@@ -940,16 +966,16 @@ function GUI.createCameraTrackerList(playerSettings)
         GUI.addCameraTrackerButtons
     )
 
-    GUI.createCameraAndTracker(
+    GUI.createCameraAddTracker(
         playerSettings.gui.cameraTrackerListFlow,
         playerSettings.trackers,
-        playerSettings.cameras[playerSettings.guiPersist.selectedCamera].trackers
+        playerSettings.cameras[playerSettings.guiPersist.selectedCamera]
     )
 end
 
-function GUI.addCameraTrackerButtons(index, _, trackers, trackerRow)
+function GUI.addCameraTrackerButtons(index, selectedCamera, _, trackers, trackerRow)
     local tracker = trackers[index]
-    local isActiveTracker = findActiveTracker(trackers) == tracker
+    local isActiveTracker = findActiveTracker(trackers, selectedCamera.surfaceName) == tracker
 
     local orderFlow = trackerRow.add {type = "flow", direction = "vertical"}
 
@@ -992,6 +1018,13 @@ function GUI.addCameraTrackerButtons(index, _, trackers, trackerRow)
             sprite = "utility/play",
             style = "tlbe_fancy_list_box_image"
         }
+    elseif tracker.surfaceName ~= selectedCamera.surfaceName then
+        trackerRow.add {
+            type = "sprite",
+            sprite = "utility/warning_icon",
+            style = "tlbe_fancy_list_box_image_reduce_size",
+            tooltip = {"tooltip.tracker-wrong-surface"}
+        }
     else
         trackerRow.add {
             type = "empty-widget",
@@ -1000,7 +1033,7 @@ function GUI.addCameraTrackerButtons(index, _, trackers, trackerRow)
     end
 end
 
-function GUI.addTrackerButtons(index, cameras, trackers, trackerRow)
+function GUI.addTrackerButtons(index, _, cameras, trackers, trackerRow)
     local tracker = trackers[index]
     local style = "tlbe_tracker_button"
     if tracker.enabled then
@@ -1056,17 +1089,20 @@ function GUI.addTrackerButtons(index, cameras, trackers, trackerRow)
     end
 end
 
-function GUI.createCameraAndTracker(parent, allTrackers, cameraTrackers)
+function GUI.createCameraAddTracker(parent, allTrackers, camera)
     if parent["tlbe-camera-add-tracker"] ~= nil then
         parent["tlbe-camera-add-tracker"].destroy()
     end
 
-    local availableTrackers = Utils.filterOut(allTrackers, cameraTrackers)
-    if #availableTrackers > 0 then
-        local availableTrackerNames = {}
-        for _, tracker in pairs(availableTrackers) do
+    local availableTrackers = Utils.filterOut(allTrackers, camera.trackers)
+    local availableTrackerNames = {}
+    for _, tracker in pairs(availableTrackers) do
+        if tracker.surfaceName == camera.surfaceName then
             table.insert(availableTrackerNames, tracker.name)
         end
+    end
+
+    if #availableTrackerNames > 0 then
         parent.add {
             type = "drop-down",
             selected_index = 1,
