@@ -67,10 +67,10 @@ function Tracker.MoveToNextTrackerFinished(trackers)
     end
 end
 
-function Tracker.findActiveTracker(trackers)
+function Tracker.findActiveTracker(trackers, surfaceName)
     local previous
     for _, tracker in pairs(trackers) do
-        if tracker.enabled == true then
+        if tracker.enabled == true and tracker.surfaceName == surfaceName then
             if tracker.moveToNextTracker ~= true then
                 return previous, tracker
             end
